# nonsugar

./: CMakeLists.txt  README.md  SYNOPSIS.hpp  nonsugar.hpp
example/: CMakeLists.txt  compiler.cpp  custom.cpp  custom_predicate.cpp  flexible.cpp  od_subcmd.cpp  optparse_declarative.cpp  optparse_declarative_subcmd.cpp  subcmd.cpp  subcmd_od.cpp  usage.cpp  wide.cpp
include/: nonsugar.hpp
test/: CMakeLists.txt  Makefile  argument.cpp  argument_order_test.cpp  argument_test.cpp  errors.err  flag_default_read.cpp  flag_default_read_test.cpp  flag_help_or_version.cpp  flag_help_or_version_test.cpp  flag_long.cpp  flag_long_test.cpp  flag_short.cpp  flag_short_test.cpp  main.cpp  mock.cpp  mock_test.cpp  mock_wstring.cpp  mock_wstring_test.cpp  parse_optional_test.cpp  parse_test.cpp  predicate.cpp  predicate_test.cpp  std_optional.cpp  std_optional_test.cpp  subcommand.cpp  subcommand_test.cpp  usage.cpp  usage_test.cpp
